# thetabeditor

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: THETA_CompilerFlags.cmake  THETA_CopyFiles.cmake  THETA_Executable.cmake  THETA_Library.cmake  THETA_Paths.cmake  THETA_PrecompiledHeader.cmake  THETA_ThirdParty.cmake
source/: CMakeLists.txt
source/actions/: CMakeLists.txt  addalternateending.cpp  addalternateending.h  addbarline.cpp  addbarline.h  addchordtext.cpp  addchordtext.h  adddirection.cpp  adddirection.h  adddynamic.cpp  adddynamic.h  addirregulargrouping.cpp  addirregulargrouping.h  addmultibarrest.cpp  addmultibarrest.h  addnote.cpp  addnote.h  addnoteproperty.cpp  addnoteproperty.h  addplayer.cpp  addplayer.h  addplayerchange.cpp  addplayerchange.h  addpositionproperty.cpp  addpositionproperty.h  addrehearsalsign.cpp  addrehearsalsign.h  addrest.cpp  addrest.h  addspecialnoteproperty.h  addstaff.cpp  addstaff.h  addsystem.cpp  addsystem.h  addtempomarker.cpp  addtempomarker.h  addtextitem.cpp  addtextitem.h  addvolumeswell.cpp  addvolumeswell.h  (+71 more)
source/app/: CMakeLists.txt  appinfo.cpp  appinfo.h  caret.cpp  caret.h  clipboard.cpp  clipboard.h  command.cpp  command.h  documentmanager.cpp  documentmanager.h  paths.cpp  paths.h  recentfiles.cpp  recentfiles.h  scorearea.cpp  scorearea.h  settings.cpp  settings.h  settingsmanager.cpp  settingsmanager.h  thetabeditor.cpp  thetabeditor.h  tuningdictionary.cpp  (+3 more)
test/: CMakeLists.txt  test_main.cpp
windows/: common.wxi  powertabeditor.wxs
xdg/: CMakeLists.txt  powertabeditor.desktop
(+341 files in other folders)
